Gradients don't correctly interpolate missing/none color components correctly https://bugs.webkit.org/show_bug.cgi?id=236025

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/gradients/gradient-with-missing-components.html

* platform/graphics/Color.cpp:
(WebCore::Color::anyComponentIsNone const):
* platform/graphics/Color.h:
Add helper to check if any component is 'none'.

* platform/graphics/ColorComponents.h:
(WebCore::operator==):
Update operator== for ColorComponents to be none-aware and treat
two components that are both none as equal.

* platform/graphics/ColorTypes.h:
(WebCore::assertInRange):
(WebCore::constexprIsNaN): Deleted.
Adopt shared version of the constexpr isnan.

* platform/graphics/cg/GradientRendererCG.cpp:
(WebCore::anyComponentIsNone):
(WebCore::GradientRendererCG::pickStrategy const):
(WebCore::GradientRendererCG::makeShading const):
Use the CGShaderRef strategy if any component of any stop is none, as it
is the only one that currently supports it correctly. Ensure none is preserved
by utilizing the unresolved component values. This can be optimized in the
future by preprocessing the color stops to pre-resolve the none components,
even allowing the CGGradientRef path to be used for supported cases.

Source/WTF:

Move isNaNConstExpr to MathExtras.h from WebCore so it can used in multiple places.

* wtf/MathExtras.h:
(WTF::isNaNConstExpr):

LayoutTests:

Add tests of gradients with explicit 'none' components in some of the colors.

* fast/gradients/gradient-with-missing-components-expected.html: Added.
* fast/gradients/gradient-with-missing-components.html: Added.



Canonical link: https://commits.webkit.org/246819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289122 268f45cc-cd09-0410-ab3c-d52691b4dbfc