Source/WTF/wtf/MathExtras.h
@@ -770,6 +770,21 @@ inline uint32_t reverseBits32(uint32_t value)
 #endif
 }
 
+// FIXME: Replace with std::isnan() once std::isnan() is constexpr.
+template<typename T> typename std::enable_if_t<std::is_floating_point_v<T>, bool> isNaNConstExpr(T value)
+{
+#if COMPILER_HAS_CLANG_BUILTIN(__builtin_isnan)
+    return __builtin_isnan(value);
+#else
+    return value != value;
+#endif
+}
+
+template<typename T> typename std::enable_if_t<std::is_integral_v<T>, bool> isNaNConstExpr(T)
+{
+    return false;
+}
+
 } // namespace WTF
 
 using WTF::shuffleVector;
@@ -777,4 +792,5 @@ using WTF::clz;
 using WTF::ctz;
 using WTF::getLSBSet;
 using WTF::getMSBSet;
+using WTF::isNaNConstExpr;
 using WTF::reverseBits32;
