Source/WebCore/platform/graphics/Color.cpp
@@ -28,6 +28,7 @@
 
 #include "ColorLuminance.h"
 #include "ColorSerialization.h"
+#include <cmath>
 #include <wtf/Assertions.h>
 #include <wtf/text/TextStream.h>
 
@@ -121,6 +122,20 @@ double Color::luminance() const
 {
     return callOnUnderlyingType([&] (const auto& underlyingColor) {
         return WebCore::relativeLuminance(underlyingColor);
+    });
+}
+
+bool Color::anyComponentIsNone() const
+{
+    return callOnUnderlyingType([&] (const auto& underlyingColor) {
+        using ColorType = std::decay_t<decltype(underlyingColor)>;
+
+        if constexpr (std::is_same_v<ColorType, SRGBA<uint8_t>>) {
+            return false;
+        } else {
+            auto [c1, c2, c3, alpha] = underlyingColor.unresolved();
+            return std::isnan(c1) || std::isnan(c2) || std::isnan(c3) || std::isnan(alpha);
+        }
     });
 }
 
