Source/WebCore/platform/graphics/ColorComponents.h
@@ -29,6 +29,7 @@
 #include <array>
 #include <cmath>
 #include <tuple>
+#include <wtf/MathExtras.h>
 
 namespace WebCore {
 
@@ -165,7 +166,15 @@ constexpr ColorComponents<T, N> perComponentMin(const ColorComponents<T, N>& a, 
 template<typename T, size_t N>
 constexpr bool operator==(const ColorComponents<T, N>& a, const ColorComponents<T, N>& b)
 {
-    return a.components == b.components;
+    for (size_t i = 0; i < N; ++i) {
+        if (a[i] == b[i])
+            continue;
+        if (isNaNConstExpr(a[i]) && isNaNConstExpr(b[i]))
+            continue;
+        return false;
+    }
+
+    return true;
 }
 
 template<typename T, size_t N>
